# Generation3DProject

./: .gitignore  Build.bat  CMakeLists.txt  README.md  cmake-build.bat  setup-windows.bat  vcpkg.json
include/application_generator/: AppWidget.h  CameraWidget.cpp  CameraWidget.h  Config.h  TerrainWidget.h
include/application_generator/app_scene/: MainMenuScene.h  SceneManager.h  TerrainScene.h
include/application_generator/application/: Application.h
include/application_generator/handler/: CameraInputHandler.h
include/application_generator/managers/: InputManager.h  SceneManager.h  ShaderManager.h
include/application_generator/resource_manager/: ResourceManager.h
include/application_generator/terrain/: Chunk.h  HeightMapGenerator.h  MapGenerator.h  PerlinNoise.h
include/application_generator/widgets/: AppWidget.h  CameraWidget.h  LightWidget.h  TerrainWidget.h
include/engine/: Light.h
include/engine/camera/: Camera.h
include/engine/drawables/: Drawable.h  RenderConfig.h
include/engine/drawables/Meshs/: Cube.h  Mesh.h  RectangleShape.h  Triangle.h
include/engine/drawables/Meshs/simple_shapes/: Cube.h  RectangleShape.h  Triangle.h
include/engine/drawables/Meshs/terrain/: Terrain.h
include/engine/drawables/meshs/: Mesh.h
include/engine/drawables/sky_sphere/: Skyphere.h
include/engine/drawables/water/: WaterPlane.h
include/engine/events/: Events.h
include/engine/imGui/: ImGuiManager.h
include/engine/inputs/: InputManager.h  InputObserver.h
include/engine/lights/: Light.h
include/engine/opengl/: AltTexture.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexBuffer.h
include/engine/scene/: Scene.h
include/engine/utils/: Color.h  Exception.h  GeometryTypes.h  List.h  Log.h  MathHelper.h  MathIncludes.h  Matrice.h  Point.h  Transform.h  Vector.h  Vertex.h
include/graphics/: BatchRenderer.h  Drawable.h  GeometricTypes.h  GeometryTypes.h  Shader.h
include/graphics/Drawables/: Cube.h  Mesh.h  RectangleShape.h
include/graphics/OpenGL/: AltShader.h  Renderer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/utils/: MathHelper.h  Paths.h
resources/shaders/: cube.frag  cube.vert  skysphere.frag  skysphere.vert  terrain.frag  terrain.vert  triangle.frag  triangle.vert  water.frag  water.vert
ressources/shaders/: triangle.frag  triangle.vert
src/app/: CMakeLists.txt  main.cpp
src/application_generator/: CMakeLists.txt  main.cpp
src/application_generator/app_scene/: MainMenuScene.cpp  SceneManager.cpp  TerrainScene.cpp
src/application_generator/application/: Application.cpp
src/application_generator/managers/: InputManager.cpp  SceneManager.cpp
src/application_generator/terrain/: Chunk.cpp  HeightMapGenerator.cpp  MapGenerator.cpp  PerlinNoise.cpp
src/application_generator/widgets/: AppWidget.cpp  CameraWidget.cpp  LightWidget.cpp  TerrainWidget.cpp
src/core/: CMakeLists.txt  Camera.cpp
src/core/graphics/: Shader.cpp
src/core/graphics/OpenGL/: AltShader.cpp  AltTexture.cpp  IndexBuffer.cpp  Renderer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/engine/: CMakeLists.txt
src/engine/camera/: Camera.cpp
src/engine/drawables/meshs/: mesh.cpp
src/engine/drawables/meshs/terrain/: Terrain.cpp
src/engine/drawables/sky_sphere/: SkySphere.cpp
src/engine/drawables/water/: WaterPlane.cpp
src/engine/imGui/: ImGuiManager.cpp
src/engine/inputs/: InputManager.cpp
src/engine/opengl/: AltTexture.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/lib/: CMakeLists.txt
